--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "intico",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://clauloayza.github.io/exercise-Test2",
   "dependencies": {
     "firebase": "^4.9.0",
     "react": "^16.2.0",
@@ -15,6 +16,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject","predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.1.0"
   }
 }
